# onelookreversedictionary

./: LICENSE  README.md  create_index.py  onelookreversedictionary.yml  pyproject.toml  query_index.py  rd-tests  test_revdic.py
