[tool.poetry]
name = "reverse-dictionary-onelook"
version = "0.1.0"
description = ""
authors = ["Malek Abid m8abid@uwaterloo.ca"]

[tool.poetry.dependencies]
python = "^3.10"
wn = "^0.9.3"
txtai = {git = "https://github.com/neuml/txtai"}
spacy = "^3.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
